<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_streets"
        android:title="@string/menu_streets"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_dark"
        android:title="@string/menu_dark"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_light"
        android:title="@string/menu_light"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_outdoors"
        android:title="@string/menu_outdoors"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_satellite"
        android:title="@string/menu_satellite"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_satellite_streets"
        android:title="@string/menu_satellitestreets"
        app:showAsAction="never" />
</menu>